Adicionando o post sobre alterando repositorios remotos no git

--- a/themes/soho/layouts/404.html
+++ b/themes/soho/layouts/404.html
@@ -2,5 +2,5 @@
 <h1>Página não encontrada!</h1>
 <br>
 <p>Desculpe, mas a URL está apontando para algo que não existe.</p>
-<p><a href="{{ .Site.BaseURL }}">Volte para casa </a> para tentar encontrá-lo novamente.</p>
+<p><a href="{{ .Site.BaseURL }}">Volte para página inicial</a> para tentar encontrá-lo novamente.</p>
 {{- end }}
